fix(vote): footer text too small

--- a/src/containers/DAO/pages/DAOPage/Proposals/ProposalDetail/Vote/Vote.module.scss
+++ b/src/containers/DAO/pages/DAOPage/Proposals/ProposalDetail/Vote/Vote.module.scss
@@ -9,6 +9,11 @@
 
 	padding: 42px 16px 16px 16px;
 	background: linear-gradient(180deg, rgba(10, 10, 10, 0) 0%, #0A0A0A 28.34%);
+
+	.FooterText {
+		font-size: 18px;
+		font-weight: 700;
+	}
 }
 
 .Choices {
